syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "MsgRsProtos";

enum EMsgType {
	ServerMsg = 0;//·þÎñÆ÷·¢ËÍ
	ClientMsg = 1;//¿Í»§¶Ë·¢ËÍ

}

message MsgMsgRsResponse {
   optional int32 id = 1;
   optional EMsgType type = 2;
}

message MsgMsgRsRequest {
	optional int32 id = 1;
	optional EMsgType type = 2;
}
